src/objects/SPE_ScorecardValues__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Pillar__c</fullName>
        <label>Avg Pillar</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>SPE ScorecardValues</relationshipLabel>
        <relationshipName>SPE_ScorecardValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Pillar__c</fullName>
        <label>Max Pillar</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Pillar__c</fullName>
        <label>Min Pillar</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pillar_Rank__c</fullName>
        <label>Pillar Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPE_Aggregate_Scorecard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Aggregate Scorecard</label>
        <referenceTo>SPE_Aggregate_Scorecard__c</referenceTo>
        <relationshipLabel>SPE ScorecardValues</relationshipLabel>
        <relationshipName>SPE_ScorecardValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPE_Template_Name__c</fullName>
        <label>SPE Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score1__c</fullName>
        <label>Score1</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScoreCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ScoreCard</label>
        <referenceTo>SPE_ScoreCard__c</referenceTo>
        <relationshipLabel>SPE ScorecardValues</relationshipLabel>
        <relationshipName>SPE_ScorecardValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scorecard_Avg__c</fullName>
        <label>Scorecard Avg</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scorecard_Max__c</fullName>
        <label>Scorecard Max</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scorecard_Min__c</fullName>
        <label>Scorecard Min</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scorecard_Ranka__c</fullName>
        <label>Scorecard Ranka</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Compleated</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalKPIValue__c</fullName>
        <label>TotalKPIValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SPE ScorecardValues</label>
    <nameField>
        <displayFormat>SV-{00000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE ScorecardValues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>